updates for training modules 5 and 6

--- a/training_materials/1.2.0_tf_tutorial.md
+++ b/training_materials/1.2.0_tf_tutorial.md
@@ -5,7 +5,7 @@
 01. [Infrastructure as Code Concepts](#️-module-1-infrastructure-as-code-concepts)
 02. [HashiCorp Introduction](#-module-2-hashicorp-introduction)  
 03. [Terraform Basics](#-module-3-terraform-basics)
-04. [Terraform Provisioners](#️-module-4-terraform-provisioners)
+04. [Terraform Provisioners & Modern Infrastructure Configuration](#️-module-4-terraform-provisioners--modern-infrastructure-configuration)
 05. [Terraform Providers](#-module-5-terraform-providers)
 06. [Terraform Language](#-module-6-terraform-language)
 07. [Variables and Data](#-module-7-variables-and-data)
@@ -143,7 +143,7 @@ This course follows the official HashiCorp Terraform Associate exam objectives a
 | 1 | 🏗️ Infrastructure as Code Concepts | 2 hours | 🟢 Beginner | 2 labs |
 | 2 | 🔷 HashiCorp Introduction | 1 hour | 🟢 Beginner | 1 lab |
 | 3 | ⚡ Terraform Basics | 3 hours | 🟢 Beginner | 4 labs |
-| 4 | 🛠️ Terraform Provisioners | 2 hours | 🟡 Intermediate | 3 labs |
+| 4 | 🛠️ Terraform Provisioners & Modern Infrastructure Configuration | 3 hours | 🟡 Intermediate | 5 labs |
 | 5 | 🔌 Terraform Providers | 2 hours | 🟡 Intermediate | 2 labs |
 | 6 | 📝 Terraform Language | 1.5 hours | 🟡 Intermediate | 2 labs |
 | 7 | 📊 Variables and Data | 2.5 hours | 🟡 Intermediate | 3 labs |
@@ -160,7 +160,7 @@ This course follows the official HashiCorp Terraform Associate exam objectives a
 | 18 | 🏗️ Standard Module Structure and Development | 3 hours | 🔴 Advanced | 4 labs |
 | 19 | 🚀 Publishing and Advanced Module Patterns | 2.5 hours | 🔴 Advanced | 3 labs |
 
-**Total Course Time**: ~38 hours of content + ~54 hands-on labs
+**Total Course Time**: ~38 hours of content + ~55 hands-on labs
 
 ---
 
@@ -1459,8 +1459,8 @@ Test your understanding of Terraform Basics with these questions:
 
 ---
 
-## 🛠️ Module 4: Modern Infrastructure Configuration
-*Duration: 2 hours | Labs: 3*
+## 🛠️ Module 4: Terraform Provisioners & Modern Infrastructure Configuration
+*Duration: 3 hours | Labs: 5 | Difficulty: 🟡 Intermediate*
 
 ### 🎯 Learning Objectives
 By the end of this module, you will be able to:
@@ -2707,7 +2707,7 @@ Test your understanding of Terraform Provisioners with these questions:
 ---
 
 ## 🔌 Module 5: Terraform Providers
-*Duration: 2 hours | Labs: 2*
+*Duration: 2.5 hours | Labs: 4 | Difficulty: 🟡 Intermediate*
 
 ### 🎯 Learning Objectives
 By the end of this module, you will be able to:
@@ -3400,16 +3400,531 @@ terraform version          # Show Terraform and provider versions
 ```
 
 ### 💡 Pro Tips Recap
-- Use `~>` version constraints for production stability
-- Always use provider aliases for multi-region deployments
-- Never hardcode credentials in configuration files
-- Use default tags for consistent resource management
-- Monitor provider API usage for cost optimization
-- Test provider configurations in development first
+- 🟢 **Use `~>` version constraints** for production stability
+- 🔵 **Always use provider aliases** for multi-region deployments
+- 🔴 **Never hardcode credentials** in configuration files
+- 🟡 **Use default tags** for consistent resource management
+- 🟠 **Monitor provider API usage** for cost optimization
+- 🟣 **Test provider configurations** in development first
 
 ---
 
-**🎉 Congratulations!** You've completed Module 5 and now understand how to work with Terraform providers effectively. You've learned about the registry, versioning, aliases, and multi-cloud configurations!
+## 🚀 Practical Provider Labs
+
+### 🎯 Lab 3: Working with Multiple Provider Types
+
+**Scenario**: Build a practical application using common providers that work together - no multiple cloud accounts needed!
+
+**📁 File: `providers.tf` - Training-Friendly Multi-Provider Setup**
+```hcl
+# 🏗️ Practical multi-provider configuration for learning
+terraform {
+  required_version = ">= 1.0"
+  
+  # 🔌 Required providers - all training-friendly!
+  required_providers {
+    # 🟠 AWS Provider - Primary cloud provider
+    aws = {
+      source  = "hashicorp/aws"
+      version = "~> 5.0"
+    }
+    
+    # 🎲 Random Provider - Generate random values
+    random = {
+      source  = "hashicorp/random"
+      version = "~> 3.4"
+    }
+    
+    # 🌐 HTTP Provider - Make HTTP requests
+    http = {
+      source  = "hashicorp/http"
+      version = "~> 3.4"
+    }
+    
+    # 📁 Local Provider - Work with local files
+    local = {
+      source  = "hashicorp/local"
+      version = "~> 2.4"
+    }
+    
+    # 🕒 Time Provider - Time-based resources
+    time = {
+      source  = "hashicorp/time"
+      version = "~> 0.9"
+    }
+    
+    # 🔗 External Provider - Execute external programs
+    external = {
+      source  = "hashicorp/external"
+      version = "~> 2.3"
+    }
+  }
+}
+
+# 🟠 AWS Provider - Primary provider
+provider "aws" {
+  region = var.aws_region
+  
+  # 🏷️ Default tags for all AWS resources
+  default_tags {
+    tags = {
+      Environment = var.environment
+      Project     = "terraform-training"
+      ManagedBy   = "terraform"
+      Owner       = var.owner_name
+    }
+  }
+}
+
+# 🟠 AWS Provider Alias - Different region for DR
+provider "aws" {
+  alias  = "backup_region"
+  region = var.backup_region
+  
+  default_tags {
+    tags = {
+      Environment = var.environment
+      Project     = "terraform-training"
+      ManagedBy   = "terraform"
+      Owner       = var.owner_name
+      Purpose     = "disaster-recovery"
+    }
+  }
+}
+```
+
+**📁 File: `main.tf` - Practical Multi-Provider Resources**
+```hcl
+# 🎲 Generate random values for unique naming
+resource "random_pet" "app_name" {
+  length = 2
+  separator = "-"
+}
+
+resource "random_password" "db_password" {
+  length  = 16
+  special = true
+  
+  # Ensure password meets AWS RDS requirements
+  min_lower   = 2
+  min_upper   = 2
+  min_numeric = 2
+  min_special = 2
+}
+
+resource "random_id" "bucket_suffix" {
+  byte_length = 4
+}
+
+# 🕒 Create timestamps for resource lifecycle
+resource "time_static" "deployment_time" {}
+
+resource "time_rotating" "monthly_rotation" {
+  rotation_days = 30
+}
+
+# 🌐 Fetch current IP address for security groups
+data "http" "current_ip" {
+  url = "https://ipv4.icanhazip.com"
+  
+  # Strip whitespace from response
+  lifecycle {
+    postcondition {
+      condition     = can(regex("^\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}$", trimspace(self.response_body)))
+      error_message = "Response must be a valid IPv4 address."
+    }
+  }
+}
+
+# 🔗 Get AWS account information
+data "external" "aws_account_info" {
+  program = ["bash", "-c", "aws sts get-caller-identity --output json"]
+}
+
+# 📁 Create local configuration file
+resource "local_file" "app_config" {
+  content = templatefile("${path.module}/templates/config.json.tpl", {
+    app_name        = random_pet.app_name.id
+    environment     = var.environment
+    deployment_time = time_static.deployment_time.rfc3339
+    aws_account_id  = data.external.aws_account_info.result.Account
+    current_ip      = trimspace(data.http.current_ip.response_body)
+  })
+  filename = "${path.module}/generated/app-config.json"
+  
+  # Set file permissions
+  file_permission = "0644"
+}
+
+# 🟠 AWS Resources using values from other providers
+resource "aws_s3_bucket" "app_storage" {
+  bucket = "${random_pet.app_name.id}-storage-${random_id.bucket_suffix.hex}"
+}
+
+resource "aws_s3_bucket_versioning" "app_storage" {
+  bucket = aws_s3_bucket.app_storage.id
+  versioning_configuration {
+    status = "Enabled"
+  }
+}
+
+resource "aws_s3_bucket_server_side_encryption_configuration" "app_storage" {
+  bucket = aws_s3_bucket.app_storage.id
+
+  rule {
+    apply_server_side_encryption_by_default {
+      sse_algorithm = "AES256"
+    }
+  }
+}
+
+# 🔐 Security group using HTTP provider data
+resource "aws_security_group" "app_sg" {
+  name        = "${random_pet.app_name.id}-sg"
+  description = "Security group for ${random_pet.app_name.id} application"
+
+  # Allow HTTP access from current IP
+  ingress {
+    description = "HTTP from current IP"
+    from_port   = 80
+    to_port     = 80
+    protocol    = "tcp"
+    cidr_blocks = ["${trimspace(data.http.current_ip.response_body)}/32"]
+  }
+
+  # Allow HTTPS access from current IP
+  ingress {
+    description = "HTTPS from current IP"
+    from_port   = 443
+    to_port     = 443
+    protocol    = "tcp"
+    cidr_blocks = ["${trimspace(data.http.current_ip.response_body)}/32"]
+  }
+
+  egress {
+    from_port   = 0
+    to_port     = 0
+    protocol    = "-1"
+    cidr_blocks = ["0.0.0.0/0"]
+  }
+
+  tags = {
+    Name = "${random_pet.app_name.id}-security-group"
+    CreatedAt = time_static.deployment_time.rfc3339
+  }
+}
+
+# 🗄️ RDS database with random password
+resource "aws_db_subnet_group" "app_db" {
+  name       = "${random_pet.app_name.id}-db-subnet-group"
+  subnet_ids = data.aws_subnets.default.ids
+
+  tags = {
+    Name = "${random_pet.app_name.id} DB Subnet Group"
+  }
+}
+
+resource "aws_db_instance" "app_database" {
+  identifier     = "${random_pet.app_name.id}-database"
+  engine         = "mysql"
+  engine_version = "8.0"
+  instance_class = "db.t3.micro"
+  
+  allocated_storage     = 20
+  max_allocated_storage = 100
+  storage_type          = "gp2"
+  storage_encrypted     = true
+
+  db_name  = "appdb"
+  username = "admin"
+  password = random_password.db_password.result
+  
+  vpc_security_group_ids = [aws_security_group.app_sg.id]
+  db_subnet_group_name   = aws_db_subnet_group.app_db.name
+  
+  backup_window      = "03:00-04:00"
+  backup_retention_period = 7
+  maintenance_window = "sun:04:00-sun:05:00"
+  
+  # Prevent accidental deletion
+  deletion_protection = false  # Set to false for training
+  skip_final_snapshot = true   # Set to true for training
+
+  tags = {
+    Name = "${random_pet.app_name.id} Database"
+    PasswordRotation = time_rotating.monthly_rotation.rfc3339
+  }
+}
+
+# 🔄 Backup resources in different region
+resource "aws_s3_bucket" "backup_storage" {
+  provider = aws.backup_region
+  bucket   = "${random_pet.app_name.id}-backup-${random_id.bucket_suffix.hex}"
+}
+
+# 📊 Create local report file
+resource "local_file" "deployment_report" {
+  content = <<-EOT
+# 📋 Deployment Report
+Generated: ${time_static.deployment_time.rfc3339}
+App Name: ${random_pet.app_name.id}
+Environment: ${var.environment}
+AWS Account: ${data.external.aws_account_info.result.Account}
+Current IP: ${trimspace(data.http.current_ip.response_body)}
+
+## 🏗️ Resources Created:
+- S3 Bucket: ${aws_s3_bucket.app_storage.bucket}
+- Backup Bucket: ${aws_s3_bucket.backup_storage.bucket}
+- Database: ${aws_db_instance.app_database.identifier}
+- Security Group: ${aws_security_group.app_sg.name}
+
+## 🔐 Generated Values:
+- Database Password: [HIDDEN - Check Terraform state]
+- Bucket Suffix: ${random_id.bucket_suffix.hex}
+
+## 🕒 Scheduled Actions:
+- Password Rotation: ${time_rotating.monthly_rotation.rfc3339}
+EOT
+  
+  filename = "${path.module}/generated/deployment-report.md"
+}
+
+# 📡 Data sources for existing AWS resources
+data "aws_vpc" "default" {
+  default = true
+}
+
+data "aws_subnets" "default" {
+  filter {
+    name   = "vpc-id"
+    values = [data.aws_vpc.default.id]
+  }
+}
+```
+
+**📁 File: `templates/config.json.tpl` - JSON Configuration Template**
+```json
+{
+  "application": {
+    "name": "${app_name}",
+    "environment": "${environment}",
+    "version": "1.0.0",
+    "deployment_time": "${deployment_time}"
+  },
+  "aws": {
+    "account_id": "${aws_account_id}",
+    "region": "us-west-2"
+  },
+  "security": {
+    "allowed_ip": "${current_ip}",
+    "encryption_enabled": true,
+    "ssl_required": true
+  },
+  "features": {
+    "database_enabled": true,
+    "backup_enabled": true,
+    "monitoring_enabled": true,
+    "auto_scaling": false
+  }
+}
+```
+
+**📁 File: `variables.tf` - Training Variables**
+```hcl
+variable "aws_region" {
+  description = "🌍 Primary AWS region"
+  type        = string
+  default     = "us-west-2"
+}
+
+variable "backup_region" {
+  description = "🔄 Backup AWS region"
+  type        = string
+  default     = "us-east-1"
+}
+
+variable "environment" {
+  description = "🏷️ Environment name"
+  type        = string
+  default     = "dev"
+  
+  validation {
+    condition     = contains(["dev", "staging", "prod"], var.environment)
+    error_message = "Environment must be dev, staging, or prod."
+  }
+}
+
+variable "owner_name" {
+  description = "👤 Owner of the resources"
+  type        = string
+  default     = "terraform-student"
+}
+```
+
+### 🎯 Lab 4: Provider Commands & Debugging
+
+**🔧 Essential Provider Commands:**
+```bash
+# 🚀 Initialize providers
+terraform init
+
+# 📋 List installed providers
+terraform providers
+
+# 🔍 Show provider schemas (helpful for learning!)
+terraform providers schema -json | jq '.provider_schemas."registry.terraform.io/hashicorp/aws"'
+
+# 🔒 Lock provider versions
+terraform providers lock -platform=linux_amd64 -platform=darwin_amd64
+
+# 🆙 Upgrade providers
+terraform init -upgrade
+
+# 🧹 Clear provider cache
+rm -rf .terraform/providers/
+
+# 🔍 Debug provider issues
+TF_LOG=DEBUG terraform plan
+TF_LOG_PROVIDER=DEBUG terraform apply
+
+# 📊 Validate provider configurations  
+terraform validate
+```
+
+**🐛 Common Provider Debugging:**
+```hcl
+# 🔍 Debug provider authentication
+resource "aws_caller_identity" "current" {}
+
+output "debug_aws_account" {
+  value = {
+    account_id = aws_caller_identity.current.account_id
+    arn        = aws_caller_identity.current.arn
+    user_id    = aws_caller_identity.current.user_id
+  }
+}
+
+# 🌐 Test HTTP provider connectivity
+data "http" "connectivity_test" {
+  url = "https://httpbin.org/json"
+  
+  request_headers = {
+    Accept = "application/json"
+  }
+}
+
+output "debug_http_response" {
+  value = jsondecode(data.http.connectivity_test.response_body)
+}
+
+# 📁 Verify local provider file operations
+resource "local_file" "test_file" {
+  content  = "Provider test successful at ${timestamp()}"
+  filename = "${path.module}/test-output.txt"
+}
+```
+
+---
+
+## 🧠 Knowledge Check: Module 5 Quiz
+
+Test your understanding of Terraform Providers with these questions:
+
+### 📝 Quiz Questions
+
+**1. What are Terraform providers?**
+- A) Configuration files for infrastructure
+- B) Plugins that enable Terraform to interact with APIs and services
+- C) Command-line tools for deployment
+- D) Version control systems
+
+**2. Which provider version constraint allows patch updates but prevents minor version changes?**
+- A) `>= 5.0`
+- B) `~> 5.31.0`
+- C) `= 5.31.0`
+- D) `< 6.0`
+
+**3. What is the purpose of provider aliases?**
+- A) To rename providers for clarity
+- B) To use multiple configurations of the same provider
+- C) To create shortcuts for long provider names
+- D) To version providers differently
+
+**4. Which provider is useful for generating random values in training environments?**
+- A) local
+- B) http
+- C) random
+- D) external
+
+**5. What does the `http` provider allow you to do?**
+- A) Host web servers
+- B) Make HTTP requests and fetch data
+- C) Configure network protocols
+- D) Manage DNS records
+
+**6. Which command initializes providers in your Terraform configuration?**
+- A) `terraform providers`
+- B) `terraform init`
+- C) `terraform apply`
+- D) `terraform plan`
+
+**7. What is the purpose of the `.terraform.lock.hcl` file?**
+- A) Lock the Terraform binary version
+- B) Lock provider versions for consistency
+- C) Lock state files from modification
+- D) Lock configuration files
+
+**8. Which provider is best for working with local files and directories?**
+- A) file
+- B) local
+- C) directory
+- D) filesystem
+
+**9. In a multi-provider setup, which resource attribute specifies which provider to use?**
+- A) `source`
+- B) `version`
+- C) `provider`
+- D) `alias`
+
+**10. What does the `external` provider allow you to do?**
+- A) Manage external APIs only
+- B) Execute external programs and use their output
+- C) Connect to external databases
+- D) Import external configurations
+
+**11. Which of these is a practical combination for training environments?**
+- A) aws + azure + gcp
+- B) aws + random + http + local
+- C) kubernetes + docker + helm
+- D) vault + consul + nomad
+
+**12. What happens when you run `terraform init -upgrade`?**
+- A) Upgrades Terraform binary
+- B) Upgrades providers to latest versions within constraints
+- C) Upgrades all infrastructure resources
+- D) Upgrades the lock file format
+
+<details>
+<summary>🔍 Click for Answers</summary>
+
+1. **B** - Providers are plugins that enable Terraform to interact with APIs and services
+2. **B** - `~> 5.31.0` allows patch updates (5.31.1, 5.31.2) but prevents minor version changes
+3. **B** - Provider aliases allow using multiple configurations of the same provider (e.g., different regions)
+4. **C** - The `random` provider generates random values like passwords, IDs, and pet names
+5. **B** - The `http` provider makes HTTP requests and fetches data from APIs or web endpoints
+6. **B** - `terraform init` downloads and installs providers specified in your configuration
+7. **B** - The lock file ensures consistent provider versions across different environments
+8. **B** - The `local` provider works with local files, directories, and file operations
+9. **C** - The `provider` attribute specifies which provider configuration to use for a resource
+10. **B** - The `external` provider executes external programs and uses their output in Terraform
+11. **B** - This combination works well for training as it doesn't require multiple cloud accounts
+12. **B** - This command upgrades providers to their latest versions within the specified constraints
+
+</details>
+
+---
+
+**🎉 Congratulations!** You've completed Module 5 and now understand how to work with Terraform providers effectively. You've learned about the registry, versioning, aliases, and practical multi-provider configurations!
 
 **➡️ Ready for Module 6?** Let me know when you'd like to continue with Terraform Language - where we'll dive deep into HCL syntax and advanced language features!
 
@@ -3478,6 +3993,50 @@ graph TB
 - **Nomad**: Job specifications
 - **Packer**: Template definitions
 - **Waypoint**: Application configuration
+
+#### 🔍 Understanding Terraform Language vs HCL
+
+**💡 Important Distinction**: 
+The **Terraform Language** is built on top of **HCL (HashiCorp Configuration Language)**. Think of HCL as the foundational syntax and grammar, while the Terraform Language adds specific meaning and functionality for infrastructure management.
+
+**🧩 Terraform Language Elements:**
+
+According to the official documentation, the Terraform language consists of only a few basic elements:
+
+1. **📦 Blocks**: Containers for other content that represent an object
+   - Have a **block type** (like `resource`, `variable`, `terraform`)
+   - Can have **zero or more labels** (like `"aws_instance"` and `"web"`)
+   - Contain a **body** with arguments and nested blocks
+
+2. **🏷️ Block Labels**: Names that identify specific instances of blocks
+
+3. **⚙️ Arguments**: Assign values to names within blocks
+   - Appear as `name = value` assignments
+   - Use identifiers mapped to expressions
+
+4. **🔧 Expressions**: Represent values, either literally or by referencing other values
+   - Can appear as argument values
+   - Can be used within other expressions
+   - Enable dynamic configuration
+
+**📊 Practical Example of Language Elements:**
+```hcl
+# BLOCK TYPE: "resource"
+# BLOCK LABELS: "aws_instance" and "web"  
+resource "aws_instance" "web" {
+  # ARGUMENTS (identifier = expression)
+  ami           = "ami-12345"           # Literal string expression
+  instance_type = var.instance_type     # Reference expression
+  count         = length(var.subnets)   # Function expression
+  
+  # NESTED BLOCK
+  tags = {
+    Name = "${var.project}-${count.index}"  # String template expression
+  }
+}
+```
+
+**🎯 Key Takeaway**: If you encounter **HCL** in documentation or discussions, think "Terraform Language" - they're essentially the same in the context of Terraform configurations!
 
 #### 🧱 HCL Syntax Fundamentals
 
@@ -3681,7 +4240,13 @@ variable "instance_type" {
 
 #### 🔄 Alternate JSON Syntax
 
-Terraform supports **JSON syntax** as an alternative to HCL for programmatic generation.
+Terraform supports **JSON syntax** as an alternative to HCL for programmatic generation. This is particularly useful when you need to generate Terraform configurations dynamically using existing JSON libraries or APIs.
+
+**📁 File Extensions:**
+- **HCL files**: `.tf` 
+- **JSON files**: `.tf.json`
+
+**⚠️ Important**: Terraform expects JSON syntax files to be named with the `.tf.json` extension, not just `.json`.
 
 **📝 HCL vs JSON Comparison:**
 
@@ -3724,6 +4289,99 @@ resource "aws_instance" "web" {
 - **💬 No comments**: JSON doesn't support comments
 - **📖 Less readable**: More verbose than HCL
 - **🔧 Limited expressions**: Some Terraform features work better in HCL
+
+**🐍 Practical Example: Generating JSON with Python**
+
+Here's how you might programmatically generate Terraform JSON configurations:
+
+```python
+#!/usr/bin/env python3
+import json
+
+def generate_terraform_json(instances):
+    """Generate Terraform JSON configuration for multiple instances"""
+    
+    terraform_config = {
+        "terraform": {
+            "required_providers": {
+                "aws": {
+                    "source": "hashicorp/aws",
+                    "version": "~> 5.0"
+                }
+            }
+        },
+        "resource": {
+            "aws_instance": {}
+        }
+    }
+    
+    # Dynamically add instances
+    for instance in instances:
+        terraform_config["resource"]["aws_instance"][instance["name"]] = {
+            "ami": instance["ami"],
+            "instance_type": instance["type"],
+            "tags": instance["tags"]
+        }
+    
+    return terraform_config
+
+# Example usage
+instances_data = [
+    {
+        "name": "web1", 
+        "ami": "ami-12345", 
+        "type": "t2.micro",
+        "tags": {"Name": "web-server-1", "Environment": "prod"}
+    },
+    {
+        "name": "web2", 
+        "ami": "ami-12345", 
+        "type": "t2.micro",
+        "tags": {"Name": "web-server-2", "Environment": "prod"}
+    }
+]
+
+# Generate and save configuration
+config = generate_terraform_json(instances_data)
+with open("main.tf.json", "w") as f:
+    json.dump(config, f, indent=2)
+
+print("Generated main.tf.json successfully!")
+```
+
+**📄 Generated `main.tf.json`:**
+```json
+{
+  "terraform": {
+    "required_providers": {
+      "aws": {
+        "source": "hashicorp/aws",
+        "version": "~> 5.0"
+      }
+    }
+  },
+  "resource": {
+    "aws_instance": {
+      "web1": {
+        "ami": "ami-12345",
+        "instance_type": "t2.micro",
+        "tags": {
+          "Name": "web-server-1",
+          "Environment": "prod"
+        }
+      },
+      "web2": {
+        "ami": "ami-12345",
+        "instance_type": "t2.micro",
+        "tags": {
+          "Name": "web-server-2",
+          "Environment": "prod"
+        }
+      }
+    }
+  }
+}
+```
 
 ### 💻 **Exercise 6.1**: HCL Syntax and Structure
 **Duration**: 20 minutes
@@ -4262,6 +4920,243 @@ output "vpc_id" {
 - Prefer HCL over JSON for human-written configurations
 
 ---
+
+## 📚 Quiz - Module 6: Terraform Language & HCL
+
+**Test your knowledge of HCL syntax, Terraform Language, and configuration best practices!**
+
+### 🧠 Knowledge Check Questions
+
+**1. What is the relationship between HCL and Terraform Language?**
+- a) They are the same thing
+- b) HCL is the foundational syntax, Terraform Language adds infrastructure-specific meaning
+- c) Terraform Language is older than HCL
+- d) HCL is only used for JSON configurations
+
+<details>
+<summary>📖 <strong>Answer</strong></summary>
+
+**✅ Correct Answer: b) HCL is the foundational syntax, Terraform Language adds infrastructure-specific meaning**
+
+**📝 Explanation**: 
+HCL (HashiCorp Configuration Language) provides the foundational syntax and grammar, while the Terraform Language builds on top of HCL to add specific meaning and functionality for infrastructure management. HCL is used across multiple HashiCorp tools (Vault, Consul, Nomad, etc.), while Terraform Language is specific to infrastructure configurations.
+</details>
+
+---
+
+**2. Which of the following are the four basic elements of the Terraform Language?**
+- a) Resources, Data Sources, Variables, Outputs
+- b) Blocks, Block Labels, Arguments, Expressions
+- c) HCL, JSON, YAML, TOML
+- d) Providers, Resources, Modules, State
+
+<details>
+<summary>📖 <strong>Answer</strong></summary>
+
+**✅ Correct Answer: b) Blocks, Block Labels, Arguments, Expressions**
+
+**📝 Explanation**: 
+According to the Terraform documentation, the language consists of only these four basic elements:
+- **Blocks**: Containers for content representing objects
+- **Block Labels**: Names identifying specific block instances  
+- **Arguments**: Name-value assignments within blocks
+- **Expressions**: Values that can be literal or reference other values
+</details>
+
+---
+
+**3. What file extension should you use for Terraform files written in JSON syntax?**
+- a) `.json`
+- b) `.tf`
+- c) `.tf.json`
+- d) `.hcl.json`
+
+<details>
+<summary>📖 <strong>Answer</strong></summary>
+
+**✅ Correct Answer: c) `.tf.json`**
+
+**📝 Explanation**: 
+Terraform expects JSON syntax files to be named with the `.tf.json` extension, not just `.json`. This tells Terraform to parse the file as a Terraform configuration written in JSON syntax rather than HCL syntax.
+</details>
+
+---
+
+**4. In this code block, identify the block type and block labels:**
+```hcl
+resource "aws_instance" "web_server" {
+  ami = "ami-12345"
+}
+```
+- a) Block type: `aws_instance`, Block labels: `web_server`
+- b) Block type: `resource`, Block labels: `aws_instance`, `web_server`
+- c) Block type: `resource`, Block labels: `aws_instance`
+- d) Block type: `web_server`, Block labels: `aws_instance`
+
+<details>
+<summary>📖 <strong>Answer</strong></summary>
+
+**✅ Correct Answer: b) Block type: `resource`, Block labels: `aws_instance`, `web_server`**
+
+**📝 Explanation**: 
+- **Block type**: `resource` (the first identifier)
+- **Block labels**: `"aws_instance"` and `"web_server"` (the quoted strings that follow)
+- The block type defines what kind of object this represents, while the labels identify the specific resource type and instance name.
+</details>
+
+---
+
+**5. Which comment styles are supported in HCL? (Select all that apply)**
+- a) `# Single line comment`
+- b) `// Alternative single line comment` 
+- c) `/* Multi-line comment */`
+- d) `<!-- XML-style comment -->`
+
+<details>
+<summary>📖 <strong>Answer</strong></summary>
+
+**✅ Correct Answers: a, b, c**
+
+**📝 Explanation**: 
+HCL supports three comment styles:
+- `# Single line comment` - Hash-style comments
+- `// Alternative single line comment` - C++-style comments  
+- `/* Multi-line comment */` - C-style multi-line comments
+
+XML-style comments (`<!-- -->`) are not supported in HCL.
+</details>
+
+---
+
+**6. What is a major limitation of using JSON syntax instead of HCL for Terraform configurations?**
+- a) JSON syntax doesn't support resources
+- b) JSON files are larger than HCL files
+- c) JSON doesn't support comments
+- d) JSON syntax is slower to parse
+
+<details>
+<summary>📖 <strong>Answer</strong></summary>
+
+**✅ Correct Answer: c) JSON doesn't support comments**
+
+**📝 Explanation**: 
+One of the major limitations of JSON syntax is that it doesn't support comments, making it harder to document your configurations. Other limitations include being more verbose and less readable than HCL, but the lack of comment support is the most significant practical limitation.
+</details>
+
+---
+
+**7. In which scenarios would you choose JSON syntax over HCL? (Select all that apply)**
+- a) When writing configurations manually
+- b) When generating configurations programmatically  
+- c) When integrating with APIs that return JSON
+- d) When you need to add detailed comments
+
+<details>
+<summary>📖 <strong>Answer</strong></summary>
+
+**✅ Correct Answers: b, c**
+
+**📝 Explanation**: 
+JSON syntax is most useful for:
+- **Programmatic generation**: When scripts or tools generate configurations
+- **API integration**: When receiving configurations from APIs in JSON format
+- **Data processing**: When converting from other JSON-based data formats
+
+You would not choose JSON for manual writing (HCL is more readable) or when you need comments (JSON doesn't support them).
+</details>
+
+---
+
+**8. What does this Terraform settings block configure?**
+```hcl
+terraform {
+  required_version = ">= 1.0"
+  required_providers {
+    aws = {
+      source  = "hashicorp/aws"
+      version = "~> 5.0"
+    }
+  }
+}
+```
+- a) Only the minimum Terraform version
+- b) Only the required providers
+- c) Both minimum Terraform version and required providers
+- d) Backend configuration
+
+<details>
+<summary>📖 <strong>Answer</strong></summary>
+
+**✅ Correct Answer: c) Both minimum Terraform version and required providers**
+
+**📝 Explanation**: 
+This Terraform settings block configures:
+- **Required version**: Specifies minimum Terraform version (1.0 or higher)
+- **Required providers**: Specifies the AWS provider with source and version constraints
+- It does not configure backend settings (that would require a `backend` block)
+</details>
+
+---
+
+**9. Which HashiCorp tools use HCL as their configuration language? (Select all that apply)**
+- a) Terraform
+- b) Vault  
+- c) Consul
+- d) Docker
+- e) Packer
+
+<details>
+<summary>📖 <strong>Answer</strong></summary>
+
+**✅ Correct Answers: a, b, c, e**
+
+**📝 Explanation**: 
+HCL is used by multiple HashiCorp tools:
+- **Terraform**: Infrastructure as Code configurations
+- **Vault**: Secrets management policies  
+- **Consul**: Service configuration
+- **Packer**: Template definitions
+- **Nomad**: Job specifications
+- **Waypoint**: Application configuration
+
+Docker is not a HashiCorp product and uses its own configuration formats.
+</details>
+
+---
+
+**10. What makes HCL "human-friendly" compared to other configuration languages?**
+- a) It uses XML syntax
+- b) It's designed to be easy to read and write
+- c) It only supports simple data types
+- d) It doesn't allow nested structures
+
+<details>
+<summary>📖 <strong>Answer</strong></summary>
+
+**✅ Correct Answer: b) It's designed to be easy to read and write**
+
+**📝 Explanation**: 
+HCL is considered "human-friendly" because:
+- Clean, readable syntax similar to other modern languages
+- Supports both simple and complex data structures  
+- Allows comments for documentation
+- Balances readability with machine-parseability
+- Less verbose than JSON while maintaining structure
+
+It supports complex data types and nested structures, making it more powerful than simpler formats.
+</details>
+
+---
+
+### 🎯 **Module 6 Summary**
+
+**🏆 Key Learning Achievements:**
+- ✅ Distinguished between **HCL** and **Terraform Language**
+- ✅ Mastered the **four basic elements**: Blocks, Labels, Arguments, Expressions
+- ✅ Understood **Terraform settings** block configuration
+- ✅ Learned **alternate JSON syntax** and when to use it
+- ✅ Applied **best practices** for syntax and formatting
+- ✅ Practiced with **comprehensive examples** and hands-on exercises
 
 **🎉 Congratulations!** You've completed Module 6 and now understand HCL syntax, Terraform language features, and best practices for writing clean, maintainable configurations!
 
